<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonInfoActivity">

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/personNameDisplayTextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/defaultValueTextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/nameLabelTextView" />

    <TextView
        android:id="@+id/ageLabelTextView"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/personAgeDisplayTextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

    <TextView
        android:id="@+id/ageDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/defaultValueTextView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ageLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/ageLabelTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>